--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -27,10 +27,10 @@
 </nav>
 <h2> &nbsp; </h2>
 <h2> Name: </h2>
-<p class='Lead'> Your name goes here </p>
+<p class='Lead'> Saloni Shah </p>
 <h2> Major: </h2>
 <p class='Lead'> <%= @major %> </p>
 <h2> Age: </h2>
 <p class='Lead'> <%= @age + 7 %> </p>
-<img></img>
 
+<img class="circular"></img>
